#+TITLE: Changelog
#+DATE: 2022-04-23T10:20:54+0800
#+AUTHOR: Jiacai Liu
#+LANGUAGE: cn
#+EMAIL: jiacai2050+org@gmail.com
#+OPTIONS: toc:nil num:nil
#+STARTUP: content

* master(unrelease)

** Imrovements
- Simplify repositories UI
* v0.6.0 (2022-06-25)
** New Features
- Query trending support spoken languages filter
- CLI support args parse, both sync and trendings are supported now
- Support gist
  - Query
  - Delete/Unstar
** Internal Improvements
- Trending API reuse =curl= instance
* v0.5.0 (2022-04-28)
** New Features
- Add oh-my-github-trending-repos-mode, browse https://github.com/trending in Emacs
  [[file:assets/omg-trendings.png]]

* v0.4.0 (2022-04-25)
** New Features
- Sync repositories in background threads, which will not hang Emacs anymore. 🍺
- Download asset in background threads, which will not hang Emacs anymore. 🍺

* v0.3.0 (2022-04-22)
** New Features
- Add commits/releases/assets-mode

  [[file:assets/omg-modes.svg]]
* v0.2.0 (2022-04-19)
** New Features
- Add =oh-my-github-repo-list= to list owned repositories
- Add =oh-my-github-whoami=, used for authentication check
#+begin_example
+---------------+--------------------+
|Created At     |2011-09-03T15:26:22Z|
+---------------+--------------------+
|ID             |1024025             |
+---------------+--------------------+
|Login          |torvalds            |
+---------------+--------------------+
|Name           |Linus Torvalds      |
+---------------+--------------------+
|Company        |Linux Foundation    |
+---------------+--------------------+
|Blog           |                    |
+---------------+--------------------+
|Location       |Portland, OR        |
+---------------+--------------------+
|Email          |                    |
+---------------+--------------------+
|Hireable       |0                   |
+---------------+--------------------+
|Public Repos   |0                   |
+---------------+--------------------+
|Public Gists   |0                   |